--- a/src/components/Cat/Cat.css
+++ b/src/components/Cat/Cat.css
@@ -30,20 +30,25 @@
   border: 1px solid red;
 }
 
-.cat__fav {
+.cat__fav-wrap {
   position: absolute;
-  right: 21px;
-  bottom: 28px;
-  width: 40px;
-  height: 36px;
+  right: 10%;
+  bottom: 10%;
+  width: 17%;
+  height: 17%;
 }
 
-.cat__fav>img {
-  object-fit: cover;
+.cat__fav-img {
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 700px) {
   .cat__wrap:hover {
     transform: scale(1);
+  }
+  .cat__fav-wrap {
+    user-select: none;
   }
 }
