--- a/src/components/Cat/Cat.css
+++ b/src/components/Cat/Cat.css
@@ -4,11 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* max-width: 225px;
-  max-height: 225px; */
   aspect-ratio: 1/1;
-  /* width: 225px;
-  height: 225px; */
   transition: all 500ms;
 }
 
@@ -25,10 +21,28 @@
   height: 100%;
 }
 
-.cat__img.cat__img--preview {
-  opacity: 0.8;
-  border: 1px solid red;
+@keyframes shimmer {
+  from {
+    background-position: 100% 100%;
+  }
+  to {
+    background-position: 00;
+  }
 }
+
+.cat__img--loading {
+  object-fit: cover;
+  width: 225px;
+  height: 225px;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(90deg, #EEEEEE 0%, #EEEEEE 40%, #DDDDDD 50%, #DDDDDD 55%, #EEEEEE 65%, #EEEEEE 100%);
+  background-size: 400%;
+  animation: shimmer 1500ms infinite;
+}
+
+
+/***************** Favorite img *****************/
 
 .cat__fav-wrap {
   position: absolute;
@@ -36,12 +50,33 @@
   bottom: 10%;
   width: 17%;
   height: 17%;
+  transform-origin: bottom center;
+  ;
 }
 
 .cat__fav-img {
   object-fit: fill;
   width: 100%;
   height: 100%;
+}
+
+.cat__wrap:hover .cat__fav-wrap {
+  animation: twitch-fav 600ms ease 1;
+}
+
+@keyframes twitch-fav {
+  33% {
+    transform: translateY(-4px) scaleX(0.8) scaleY(1.1);
+  }
+  66% {
+    transform: scaleX(1.2) scaleY(1);
+  }
+}
+
+.cats-loading {
+  padding: 20px 0px 40px 0px;
+  width: fit-content;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 700px) {
