--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* reset */
+
 *,
 *::before,
 *::after {
@@ -48,6 +50,9 @@ body {
   line-height: 1;
   font-family: 'Roboto';
 }
+
+
+/************** Base style ***************/
 
 .app__content {
   /* Header + Margin */
